Fixed resolutions and hid scrollbars on carousel headline

--- a/modules/core/client/scss/components/carousel.scss
+++ b/modules/core/client/scss/components/carousel.scss
@@ -80,9 +80,9 @@ $transition-duration: .9s;
   letter-spacing: 3px;
 }
 
-.info .animated-slide {
-  overflow-y: auto;
-}
+//.info .animated-slide {
+//  overflow-y: auto;
+//}
 
 .animated-slide {
   position: absolute;
